# claude-p

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml  scaffolder.md
docs/: filesystem.md  install.md  jobs.md  network.md  overview.md
jobs/: README.md  deploy.sh
jobs-example/hello-world/: README.md  job.yaml  main.py  pyproject.toml
jobs/meta-builder/: job.yaml  main.py  pyproject.toml
jobs/meta-scout/: job.yaml  main.py  pyproject.toml
scripts/: bootstrap.sh  install.sh  setup-sync.sh  update.sh
src/claude_p/: __init__.py  __main__.py  auth.py  auto_schedule.py  claude_ai.py  claude_runner.py  config.py  db.py  executor.py  ledger.py  manifest.py  models.py  net.py  queries.py  registry.py  scheduler.py  webdav.py
src/claude_p/api/: __init__.py  jobs.py  ledger.py  runs.py  scaffold.py  settings.py
src/claude_p/backends/: __init__.py  base.py  claude_cli.py
src/claude_p/migrations/: 001_initial.sql  002_rate_limits_and_model_usage.sql  003_claude_ai_usage.sql  004_remove_scaffold.sql  005_auto_schedule.sql
src/claude_p/web/static/: style.css
src/claude_p/web/templates/: base.html  job_detail.html  jobs_list.html  ledger.html  run_detail.html  scaffold.html  scaffold_view.html  settings.html
systemd/: claude-p.service  claude-p.user.service
tests/: test_auto_schedule.py  test_backend_protocol.py  test_claude_ai.py  test_claude_cli_backend.py  test_claude_runner.py  test_db.py  test_init.py  test_ledger.py  test_llm_injection.py  test_manifest.py
